[#81] Fixed too long names

--- a/src/components/players/details/card/index.module.scss
+++ b/src/components/players/details/card/index.module.scss
@@ -37,7 +37,7 @@
       align-items: center;
 
       .name {
-        font-size: 28px;
+        font-size: 22px;
         color: $grey5;
         font-weight: bold;
       }
@@ -46,15 +46,16 @@
         flex: 1;
         padding-right: 5px;
         color: $background-color-purple;
-        font-size: 40px;
+        font-size: 36px;
         font-weight: bold;
         text-align: end;
       }
     }
 
     .position {
+      margin-top: 1px;
       color: $grey4;
-      font-size: 18px;
+      font-size: 16px;
     }
 
     .details {
@@ -64,7 +65,7 @@
   }
 }
 
-.thumb {
+.thumbContainer {
   display: flex;
   justify-content: center;
   align-items: flex-end;
@@ -73,7 +74,7 @@
   margin-left: -95px;
   background-image: url('../../../../assets/imgs/player-backdrop.png');
   background-size: cover;
-  transition: all 0.3s ease-out;
+  transition: all .295s ease-out;
 
   img {
     width: 100%;
@@ -89,11 +90,14 @@
 }
 
 .info {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   margin-left: 10px;
 }
 
 .name {
-  font-size: 28px;
+  font-size: 22px;
   color: $grey5;
   font-weight: bold;
 }
@@ -102,7 +106,7 @@
   flex: 1;
   padding-right: 5px;
   color: $background-color-purple;
-  font-size: 40px;
+  font-size: 36px;
   font-weight: bold;
   text-align: end;
 }
